--- a/index.html
+++ b/index.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <canvas id="canvas"></canvas>
-  <script src="lib/keymaster.js"></script>
-  <script src="lib/utils.js"></script>
-  <script src="lib/movingObject.js"></script>
-  <script src="lib/asteroid.js"></script>
-  <script src="lib/ship.js"></script>
-  <script src="lib/game.js"></script>
-  <script src="lib/gameView.js"></script>
-  <script src="lib/bullet.js"></script>
-  <script>
-    var canvas = document.getElementById("canvas");
-    canvas.height = Asteroids.Game.DIM_X;
-    canvas.width = Asteroids.Game.DIM_Y;
-    var ctx = canvas.getContext("2d");
-    var game = new Asteroids.Game();
-    var gameView = new Asteroids.GameView(game, ctx);
-    gameView.start();
-  </script>
+  <head>
+    <title>Asteroids</title>
+    <script src="lib/keymaster.js"></script>
+    <script src="lib/utils.js"></script>
+    <script src="lib/movingObject.js"></script>
+    <script src="lib/asteroid.js"></script>
+    <script src="lib/ship.js"></script>
+    <script src="lib/game.js"></script>
+    <script src="lib/gameView.js"></script>
+    <script src="lib/bullet.js"></script>
+
+    <link href="css/app.css" rel="stylesheet" type="text/css">
+  </head>
+
+  <body>
+    <h1 class="game-name">Asteroids</h1>
+
+    <section>
+      <canvas id="canvas"></canvas>
+    </section>
+
+    <script>
+      var canvas = document.getElementById("canvas");
+      canvas.height = Asteroids.Game.DIM_X;
+      canvas.width = Asteroids.Game.DIM_Y;
+      var ctx = canvas.getContext("2d");
+      var game = new Asteroids.Game();
+      var gameView = new Asteroids.GameView(game, ctx);
+      gameView.start();
+
+      if (game.NUM_ASTEROIDS < 5) {
+        game.addAsteroids();
+      }
+    </script>
+  </body>
 </html>
