--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>Asteroids</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+
     <script src="lib/keymaster.js"></script>
     <script src="lib/utils.js"></script>
     <script src="lib/movingObject.js"></script>
@@ -29,10 +32,6 @@
       var game = new Asteroids.Game();
       var gameView = new Asteroids.GameView(game, ctx);
       gameView.start();
-
-      if (game.NUM_ASTEROIDS < 5) {
-        game.addAsteroids();
-      }
     </script>
   </body>
 </html>
