Final fix of wrapping bullets bug.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,16 @@
   <body>
     <h1 class="game-name">Asteroids</h1>
 
-    <section>
+    <section class="canvas">
       <canvas id="canvas"></canvas>
+    </section>
+
+    <section class="instructions">
+      <p>
+        There is no inertia in space. If you want to stop, you must make the
+        ship stop. You can never win this. You are lost in space. There are
+        asteroids everywhere. It's only a matter of time...
+      </p>
     </section>
 
     <script>
