Finish start screen.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <h1 class="game-name">Asteroids</h1>
 
-    <section class="canvas">
+    <section class="canvas group">
       <div class="play-game">
         Hit Enter to Play
         <p>Navigate with the arrow keys<br>
